2010-07-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Generate documentation.

2010-07-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/Package.cs:
	* Mono.Addins.Setup/AddinInfo.cs:
	* Mono.Addins.Setup/SetupTool.cs:
	* Mono.Addins.Setup/SetupService.cs:
	* Mono.Addins.Setup/RepositoryRecord.cs:
	* Mono.Addins.Setup/InstallException.cs:
	* Mono.Addins.Setup/PackageCollection.cs:
	* Mono.Addins.Setup/RepositoryRegistry.cs:
	* Mono.Addins.Setup/AddinRepositoryEntry.cs:
	* Mono.Addins.Setup/ConsoleAddinInstaller.cs: Added some
	  documentation.

2010-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Fix output directory for the
	  Release configuration.

2010-04-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/AddinStore.cs: Properly get the url path
	  (old way didn't work on windows).

2010-04-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/RepositoryRegistry.cs: GetAvailableUpdates
	  (id,version) doesn't work. It makes no sense to ask for
	  updates for a specific add-in version. Added
	  GetAvaliableAddinUpdates methods which take only an id and
	  no version.

2010-03-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: csc doesn't like iso-2.

2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Make sure the solution builds on
	  MS.NET 2.0.

2010-03-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Flush.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupTool.cs: Allow specifying multiple
	  levels of verbosity.

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Bump Mono.Addins version.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/PcFileCache.cs: Updated from MD.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/PcFileCache.cs: